--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
       .control-section {
         margin: 20px 0;
         padding: 15px;
-        background: linear-gradient(135deg, #cc00cc, #ccffff);
+        background: linear-gradient(126deg, #2d3fa5, #a3a3a3);
         border-radius: 10px;
         display: flex;
         flex-direction: column;
@@ -118,7 +118,7 @@
       </div>
 
       <!-- Media Controls -->
-      <div class="control-section">
+      <div class="control-section media-controls">
         <h2 class="section-title">
           <span class="material-icons">play_circle_filled</span>
           Media Controls
